# MCP-Course

./: .gitignore  PROMPT.MD  README.md  pyproject.toml  quickstart.py
Module 1 - Python Foundations for MCP/: README.MD  api_requests.py  asyncio_fundamentals.py  cli_tools.py
Module 1 — Python Foundations for MCP/: json_serialization.py  project.py  setup_uv_project.py
Module 2 - Introduction to MCP/: README.MD  server.py
Module 2 - Introduction to MCP/mcp_tool_system/: advanced_tools.py
Module 2 — Introduction to MCP/: models.py  tools.py
Module 2 — Introduction to MCP/mcp_tool_system/: llm_router.py  main.py
Module 3 - Building MCP Servers with Python/: README.MD
Module 4 - LLM Integration/: README.MD
Module 5 - Advanced MCP Systems Topics/: README.MD
Module 6 - MCP + RAG Systems/: README.MD
Module 7 - Multi-Agent MCP Systems/: README.MD
Module 8 - Production MCP Systems/: README.MD
